k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-pig-defi
  labels:
    name: smart-pig-defi
    app: smart-pig-defi
